Fix position of grayed part of collapsable annotation list in item-page

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -1156,6 +1156,7 @@ body main section.campaignstats .right {
 		}
 		&.closed::after {
 			height: 100px;
+      margin-left: 30px;
 		}
 	}
 	i.show-more {
